[package]
name = "to_phantom"
version = "0.1.0"
edition = "2021"
authors = ["Gino Valente <gino.valente.code@gmail.com>"]
description = "Convert generics to PhantomData in proc macros"
repository = "https://github.com/MrGVSV/to_phantom"
license = "MIT OR Apache-2.0"
keywords = ["generics", "phantom", "phantomdata", "convert", "macro"]
readme = "README.md"
exclude = [".github/**/*"]

[dependencies]
syn = { version = "2.0", default-features = false, features = ["derive", "parsing", "printing"] }
proc-macro2 = "1.0"
quote = "1.0"